--- a/src/main/resources/templates/inventory/index.html
+++ b/src/main/resources/templates/inventory/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html th:insert="fragments.html :: nav">
-<head>
-    <meta charset="UTF-8">
-    <title>Inventory</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments.html :: headerfiles"></head>
+
 <body>
+<header th:insert="fragments.html :: navbar"></header>
+
 <table class="table">
     <thead>
     <tr>
