--- a/src/main/resources/templates/inventory/addInventory.html
+++ b/src/main/resources/templates/inventory/addInventory.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html th:insert="fragments.html :: nav">
-<head>
-    <meta charset="UTF-8">
-    <title>Add-Inventory</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments.html :: headerfiles"></head>
 <body>
+<header th:insert="fragments.html :: navbar"></header>
 <form>
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
