--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
                 <i class="fa fa-user"></i> Please Login
             </div>
             <div class="card-block" style="padding: 24px;">
-                <form name="f" th:action="@{/loginPage}" method="post">
+                <form name="f" th:action="@{/login}" method="post">
                     <fieldset>
                         <!-- Thymeleaf + Spring Security error display -->
                         <div th:if="${param.error}" class="alert alert-danger">
@@ -23,14 +23,14 @@
 
                         <!-- Login Controls -->
                         <div class="form-group">
-                            <label for="txtUsername">Username</label>
-                            <input type="text" class="form-control" id="txtUsername" name="txtUsername"
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" id="username" name="username"
                                    placeholder="Username">
                         </div>
 
                         <div class="form-group">
-                            <label for="txtPassword">Password</label>
-                            <input type="password" class="form-control" id="txtPassword" name="txtPassword"
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" name="password"
                                    placeholder="Password">
                         </div>
 
